--- a/band_website/src/index.css
+++ b/band_website/src/index.css
@@ -1,11 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-
+  font-family: 'Roboto', sans-serif;
 }
-
 
 .TopBar {
   background-color: lightblue;
+  font-family: 'Raleway', sans-serif;
 }
