--- a/band_website/src/index.css
+++ b/band_website/src/index.css
@@ -8,3 +8,7 @@ body {
   background-color: lightblue;
   font-family: 'Raleway', sans-serif;
 }
+
+.TopBarItem {
+  font-family: 'Anton', sans-serif;
+}
