--- a/band_website/src/index.css
+++ b/band_website/src/index.css
@@ -5,10 +5,37 @@ body {
 }
 
 .TopBar {
-  background-color: lightblue;
   font-family: 'Raleway', sans-serif;
 }
 
 .TopBarItem {
   font-family: 'Anton', sans-serif;
+}
+
+.Music {
+  background-color: lightblue;
+}
+
+.Music {
+  background-color: lightblue;
+}
+
+.Shows {
+  background-color: lightblue;
+}
+
+.Videos {
+  background-color: lightblue;
+}
+
+.Photos {
+  background-color: lightblue;
+}
+
+.Contact {
+  background-color: lightblue;
+}
+
+.parallax-container {
+  height: 1500px;
 }
