changed soundcloud iframe prop of scroll to yes, added link to font Kanit in index.html, cleaned up css file slightly

--- a/band_website/src/index.css
+++ b/band_website/src/index.css
@@ -18,6 +18,6 @@ a:hover {color: #90caf9;}
 
 .TopBar {font-family: 'Raleway', sans-serif;}
 
-.TopBarItem {font-family: 'Anton', sans-serif;}
+.TopBarItem {font-family: 'Kanit', sans-serif;}
 
 .parallax-container {height: 1250px;}
