added new html className to section headers to change font to raleway

--- a/band_website/src/index.css
+++ b/band_website/src/index.css
@@ -18,6 +18,8 @@ a:hover {color: #90caf9;}
 
 .TopBar {font-family: 'Raleway', sans-serif;}
 
-.TopBarItem {font-family: 'Kanit', sans-serif;}
+.componentHeader {font-family: 'Raleway', sans-serif;}
+
+.TopBarItem {font-family: 'Rubik Mono One', sans-serif;}
 
 .parallax-container {height: 1250px;}
