moving inline styling out of JSX and into CSS

--- a/band_website/src/index.css
+++ b/band_website/src/index.css
@@ -18,7 +18,7 @@ a:hover {color: #90caf9;}
 
 .TopBar {font-family: 'Raleway', sans-serif;}
 
-.componentHeader {font-family: 'Raleway', sans-serif;}
+.ComponentHeader {font-family: 'Raleway', sans-serif;}
 
 .TopBarItem {font-family: 'Rubik Mono One', sans-serif;}
 
