moves styling of video component into CSS file.  adds a container to pad out and center the spacing.  Changes width to 100% to make it responsive, as well as changing height to units of vh.  For some reason, using other relative spacing units like em and rem resulted in an iframe that had a huge blank space at the bottom

--- a/band_website/src/index.css
+++ b/band_website/src/index.css
@@ -25,4 +25,9 @@ a:hover {color: #90caf9;}
 
 .coming-soon {font-family: 'Oswald', sans-serif;}
 
+.video-embed {
+  width: 100%;
+  height: 50vh;
+}
+
 .parallax-container {height: 1250px;}
